--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,3 +1,4 @@
+<%= render 'partials/notifications' %>
 <section class="bg-gray-50 dark:bg-gray-900 h-screen">
   <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto h-screen lg:py-0">
     <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
@@ -12,8 +13,8 @@
         </h1>
         <%= form_with url: login_path, method: :post, class: "space-y-4 md:space-y-6" do |f| %>
           <div>
-            <%= f.label :Nombre, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
-            <%= f.text_field :name, placeholder: "Ingresa el nombre de usuario", class: "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+            <%= f.label :Email, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+            <%= f.text_field :email, placeholder: "Ingresa el email", class: "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
           </div>
           <div>
             <%= f.label :Contraseña, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
@@ -33,7 +34,8 @@
            
           </div>
           <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
-            <%= link_to "Iniciar Sesión", dashboard_path_url %>
+            
+            <%= submit_tag "Login" %>
           </button>
         <% end %>
       </div>
