--- a/app/views/admin/students/_form.html.erb
+++ b/app/views/admin/students/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="p-4 sm:ml-64 dark:bg-gray-800 min-h-screen">
     <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto">
-            <%= form_for @student, url: (@student.new_record? ? create_student_path : update_student_path(@student)), method: (@student.new_record? ? :post : :patch) do |f| %>
+            <%= form_with model: [:admin, @student] do |f| %>
                 <div class="flex flex-col text-center w-full mb-10">
                     <h1><%= f.label title, class: "sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900 dark:text-white"%></h1>  
                 </div>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="flex flex-col sm:flex-row sm:space-x-5 space-y-5 sm:space-y-0"> 
                     <%= f.submit submit_button_text, class: "p-2 flex justify-center items-center gap-2 h-12 cursor-pointer rounded-md shadow-2xl text-white font-semibold bg-gradient-to-r from-[#28B8D5] via-[#155E8D] to-[#075760] hover:shadow-xl hover:shadow-blue-500 hover:scale-105 duration-300 hover:from-[#075760] hover:to-[#28B8D5]" %>
-                    <%= link_to "Cancelar", students_url, class: "p-5 flex justify-center items-center gap-2 h-12 cursor-pointer rounded-md shadow-2xl text-white font-semibold bg-gradient-to-r from-[#f87171] via-[#ef4444] to-[#dc2626] hover:shadow-xl hover:shadow-red-500 hover:scale-105 duration-300 hover:from-[#dc2626] hover:to-[#f87171]" %>
+                    <%= link_to "Cancelar", admin_students_path, class: "p-5 flex justify-center items-center gap-2 h-12 cursor-pointer rounded-md shadow-2xl text-white font-semibold bg-gradient-to-r from-[#f87171] via-[#ef4444] to-[#dc2626] hover:shadow-xl hover:shadow-red-500 hover:scale-105 duration-300 hover:from-[#dc2626] hover:to-[#f87171]" %>
                 </div>
             <% end %>
         </div>
