--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -7,7 +7,15 @@
             </a>
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
                 <button type="button">
-                    <%= link_to "Iniciar Sesión", login_path, class: "text-white mr-5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" %>
+                    <% if session[:user_type] == "Admin" %>
+                        <%= link_to session[:user_name], admin_dashboard_url, class: "text-white mr-5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" %>
+                    <% elsif session[:user_type] == "Teacher" %>
+                        <%= link_to session[:user_name], teacher_dashboard_url, class: "text-white mr-5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" %>
+                    <% elsif session[:user_type] == "Student" %>
+                        <%= link_to session[:user_name], student_dashboard_url, class: "text-white mr-5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" %>
+                    <% else %>
+                        <%= link_to "Iniciar Sesión", login_path, class: "text-white mr-5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" %>
+                    <% end %>
                 </button>
                 <div>
                     <%= render "partials/theme" %>
