--- a/app/views/teacher/dashboards/dashboard.html.erb
+++ b/app/views/teacher/dashboards/dashboard.html.erb
@@ -1,3 +1,29 @@
 <%= render 'teacher/menu' %>
-<div class="p-4 sm:ml-64 dark:bg-gray-800 min-h-screen">
+<div class="p-4 sm:ml-64 dark:bg-gray-800 min-h-screen text-gray-600">
+    <div class="container px-5 py-24 mx-auto flex flex-col">
+        <div class="lg:w-4/6 mx-auto">
+            <div class="flex flex-col sm:flex-row mt-10">
+                <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
+                    <div class="w-20 h-20 rounded-full inline-flex items-center justify-center">
+                        <div class="relative w-full h-full">
+                            <% if current_user.photo.attached? %>
+                                <img src="<%= url_for(current_user.photo) %>" class="shadow-xl rounded-full w-full h-full object-cover">
+                            <% else %>
+                                <p>Foto no disponible...</p>
+                            <% end %>
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-center text-center justify-center">
+                        <h1 class="font-medium title-font mt-4 text-gray-900 text-lg"><%= current_user.name %></h1>
+                        <h2 class="font-medium title-font text-gray-900 text-lg"><%= current_user.email %></h2>
+                        <div class="w-12 h-1 bg-indigo-500 rounded mt-2 mb-4"></div>
+                        <p class="text-base"><%= current_user.telephone %></p>
+                    </div>
+                </div>
+                <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-200 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
+                    <p class="leading-relaxed text-lg mb-4">Text</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
